@@ -80,13 +80,12 @@ class AutoRankmirrorsProcess(multiprocessing.Process):
     @staticmethod
     def sync():
         """ Synchronize cached writes to persistent storage """
-        with misc.raised_privileges() as __:
-            try:
-                subprocess.check_call(['sync'])
-            except subprocess.CalledProcessError as why:
-                logging.warning(
-                    "Can't synchronize cached writes to persistent storage: %s",
-                    why)
+        try:
+            subprocess.check_call(['sync'])
+        except subprocess.CalledProcessError as why:
+            logging.warning(
+                "Can't synchronize cached writes to persistent storage: %s",
+                why)
 
     def update_mirrorlist(self):
         """ Make sure we have the latest antergos-mirrorlist files """
@@ -106,13 +105,13 @@ class AutoRankmirrorsProcess(multiprocessing.Process):
                 pacnew_path = self.antergos_mirrorlist + ".pacnew"
                 if os.path.exists(pacnew_path):
                     shutil.copy(pacnew_path, self.antergos_mirrorlist)
+                self.sync()
                 logging.debug("Mirrorlists updated successfully")
             except subprocess.CalledProcessError as why:
                 logging.warning(
                     'Cannot update antergos-mirrorlist package: %s', why)
             except OSError as why:
                 logging.warning('Error copying new mirrorlist files: %s', why)
-        self.sync()
 
     def get_mirror_stats(self):
         """ Retrieve the current mirror status JSON data. """
@@ -139,7 +138,6 @@ class AutoRankmirrorsProcess(multiprocessing.Process):
 
             # Filter incomplete mirrors  and mirrors that haven't synced.
             mirrors = [m for m in mirrors if self.is_good_mirror(m)]
-
             self.json_obj['urls'] = mirrors
         except KeyError as err:
             logging.debug('Failed to parse retrieved mirror data: %s', err)
@@ -221,9 +219,6 @@ class AutoRankmirrorsProcess(multiprocessing.Process):
             if fraction != old_fraction:
                 self.fraction.send(fraction)
                 old_fraction = fraction
-        
-        self.fraction.send(1.0)
-        self.fraction.close()
 
         # Wait for all threads to complete
         q_in.join()
@@ -261,52 +256,51 @@ class AutoRankmirrorsProcess(multiprocessing.Process):
             with open(self.antergos_mirrorlist) as mirrors:
                 lines = [x.strip() for x in mirrors.readlines()]
 
-            for i in range(len(lines)):
-                srv_comment = lines[i].startswith("#Server")
-                srv = lines[i].startswith("Server")
+            for i, line in enumerate(lines):
+                srv_comment = line.startswith("#Server")
+                srv = line.startswith("Server")
 
-                if autoselect_on and srv and autoselect in lines[i]:
+                if autoselect_on and srv and autoselect in line:
                     # Comment out auto selection
-                    lines[i] = "#" + lines[i]
+                    lines[i] = "#" + line
                     autoselect_on = False
-                elif autoselect_sf and srv and 'sourceforge' in lines[i]:
+                elif autoselect_sf and srv and 'sourceforge' in line:
                     # Comment out sourceforge auto selection url
-                    lines[i] = "#" + lines[i]
+                    lines[i] = "#" + line
                     autoselect_sf = False
-                elif srv_comment and autoselect not in lines[i] and 'sourceforge' not in lines[i]:
+                elif srv_comment and autoselect not in line and 'sourceforge' not in line:
                     # Uncomment Antergos mirror
-                    lines[i] = lines[i].lstrip("#")
+                    lines[i] = line.lstrip("#")
 
             with misc.raised_privileges() as __:
                 # Write new one
                 with open(self.antergos_mirrorlist, 'w') as mirrors:
                     mirrors.write("\n".join(lines) + "\n")
-            self.sync()
+                self.sync()
 
     def run_rankmirrors(self):
         """ Runs rankmirrors to sort Antergos mirrors """
         if os.path.exists("/usr/bin/rankmirrors"):
             self.uncomment_antergos_mirrors()
-
-            with misc.raised_privileges() as __:
-                try:
-                    # Store rankmirrors output in a temporary file
-                    with tempfile.TemporaryFile(mode='w+t') as temp_file:
-                        cmd = [
-                            'rankmirrors',
-                            '-n', '0',
-                            '-r', 'antergos',
-                            self.antergos_mirrorlist]
-                        subprocess.call(cmd, stdout=temp_file)
-                        temp_file.seek(0)
-                        # Copy new mirrorlist to the old one
+            try:
+                # Store rankmirrors output in a temporary file
+                with tempfile.TemporaryFile(mode='w+t') as temp_file:
+                    cmd = [
+                        'rankmirrors',
+                        '-n', '0',
+                        '-r', 'antergos',
+                        self.antergos_mirrorlist]
+                    subprocess.call(cmd, stdout=temp_file)
+                    temp_file.seek(0)
+                    # Copy new mirrorlist to the old one
+                    with misc.raised_privileges() as __:
                         with open(self.antergos_mirrorlist, 'w') as antergos_mirrorlist_file:
                             antergos_mirrorlist_file.write(temp_file.read())
-                except subprocess.CalledProcessError as why:
-                    logging.debug(
-                        'Cannot run rankmirrors on Antergos mirrorlist: %s',
-                        why)
-            self.sync()
+                    self.sync()
+            except subprocess.CalledProcessError as why:
+                logging.debug(
+                    'Cannot run rankmirrors on Antergos mirrorlist: %s',
+                    why)
 
     def filter_and_sort_arch_mirrorlist(self):
         """ Sort Arch mirrorlist """
@@ -319,14 +313,13 @@ class AutoRankmirrorsProcess(multiprocessing.Process):
             output += "Server = {0}{1}/os/{2}\n".format(
                 mirror['url'],
                 '$repo',
-                '$arch'
-            )
+                '$arch')
 
         # Write modified Arch mirrorlist
         with misc.raised_privileges() as __:
             with open(self.arch_mirrorlist, 'w') as arch_mirrors:
                 arch_mirrors.write(output)
-        self.sync()
+            self.sync()
 
     def run(self):
         """ Run process """
@@ -341,15 +334,18 @@ class AutoRankmirrorsProcess(multiprocessing.Process):
         logging.debug("Filtering and sorting Arch mirrors...")
         self.filter_and_sort_arch_mirrorlist()
 
-        logging.debug(
-            "Running rankmirrors command to sort Antergos mirrors...")
-        self.run_rankmirrors()
-        
         self.arch_mirrorlist_ranked = [
             x for x in self.arch_mirrorlist_ranked if x]
         self.settings.set('rankmirrors_result', self.arch_mirrorlist_ranked)
 
+        logging.debug(
+            "Running rankmirrors command to sort Antergos mirrors...")
+        self.run_rankmirrors()
+
         logging.debug("Auto mirror selection has been run successfully.")
+
+        self.fraction.send(1.0)
+        self.fraction.close()
 
 def test_module():
     """ Helper function to test this module """
